# fixed_point

./: CMakeLists.txt  README.md
cmake/: fixedpointConfig.cmake.in
examples/: CMakeLists.txt  simple_arithmetics.cpp
include/: CMakeLists.txt
include/fixed_point/: scaled_int.hpp  storage_type.hpp  type_traits.hpp  unscaled_int.hpp
include/fixedpoint/: fixedpoint.hpp  scaled_int.hpp
tests/: CMakeLists.txt  fixedpoint_test.cpp  scaled_int_test.cpp
